--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MeetSync - Virtual Meeting Platform</title>
+    <title>SAMVAAD-X - Virtual Meeting Platform</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.replit.com/agent/bootstrap-agent-dark-theme.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <div class="brand">
                     <a href="/" class="text-decoration-none">
-                        <i class="fas fa-video text-primary"></i> MeetSync
+                        <i class="fas fa-video text-primary"></i> SAMVAAD-X
                     </a>
                 </div>
                 
@@ -60,7 +60,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.11.1/simplepeer.min.js"></script>
     
     <!-- Fabric.js for Whiteboard -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.1/fabric.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.5.0/fabric.min.js"></script>
     
     <!-- RecordRTC for Recording -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.6.2/RecordRTC.min.js"></script>
